# ffmpeg-mpp-video-processing

./: CMakeLists.txt  LICENSE  README.en.md  README.md  main.cpp
core/: FramePtrWrapper.cpp  FramePtrWrapper.h  Utils.cpp  Utils.h
encoders/: XMediaEncode.cpp  XMediaEncode.h  XRtmp.cpp  XRtmp.h
providers/: FileVideoProvider.cpp  FileVideoProvider.h  ThreadProvider.cpp  ThreadProvider.h  VideoProvider.cpp  VideoProvider.h
